# srai-voiceassist

./: .gitignore  LICENSE  README.md  pyproject.toml
srai_voiceassist/: client_openai_audio.py  client_perplexity.py  service_playback.py  service_prompt.py  service_record.py  service_transcribe.py
srai_voiceassist/script/: voiceassist.py
test/: test.py  voice_record_test.py
