[tool.poetry]
name = "srai-voiceassist"
version = "0.1.1"
description = "srai-library for voice assistance in any language."
authors = ["Jaap Oosterbroek <jaap.oosterbroek@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/southriverai/srai-voiceassist"
repository = "https://github.com/southriverai/srai-voiceassist"
keywords = ["SRAI", "TOOLS"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
openai = "^1.35.5"
sounddevice = "^0.4.7"
soundfile = "^0.12.1"
SpeechRecognition= "^3.10.0"
pyaudio= "^0.2.13"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
twine = "^5.1.1"
wheel = "^0.43.0"
setuptools = "^70.2.0"

[tool.poetry.scripts]
voiceassist = "srai_voiceassist.script.voiceassist:main"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry==1.8.3"]
build-backend = "poetry.core.masonry.api"
